initiate from argument wip